add doku download

--- a/Author.html
+++ b/Author.html
@@ -42,8 +42,7 @@
             <ul>
                 <li class="footer_link"><a href="https://www.umweltbundesamt.de/daten/ressourcen-abfall/verwertung-entsorgung-ausgewaehlter-abfallarten/verpackungsabfaelle#verpackungen-uberall">
                     Daten</a></li>
-                <!--<li class="footer_link"><a href="#">
-                    Dokumentation</a></li>-->
+                <li class="footer_link"><a href="Gest_2_Dokumentation_HS_Bremen.pdf" download="Niclas_Rieckers-Gest_2">Dokumentation</a></li>
                 <li class="footer_link"><a href="#">
                     Author</a></li>
             </ul>
