--- a/Author.html
+++ b/Author.html
@@ -40,9 +40,9 @@
     <footer class="footer">
         <nav>
             <ul>
-                <li class="footer_link"><a href="https://www.umweltbundesamt.de/daten/ressourcen-abfall/verwertung-entsorgung-ausgewaehlter-abfallarten/verpackungsabfaelle#verpackungen-uberall">
+                <li class="footer_link"><a href="https://www.umweltbundesamt.de/daten/ressourcen-abfall/verwertung-entsorgung-ausgewaehlter-abfallarten/verpackungsabfaelle#verpackungen-uberall" target="_blank">
                     Daten</a></li>
-                <li class="footer_link"><a href="Gest_2_Dokumentation_HS_Bremen.pdf" download="Niclas_Rieckers-Gest_2">Dokumentation</a></li>
+                <li class="footer_link"><a href="Gest_2_Dokumentation_HS_Bremen.pdf" target="_blank"    download="Niclas_Rieckers-Gest_2">Dokumentation</a></li>
                 <li class="footer_link"><a href="#">
                     Author</a></li>
             </ul>
